--- a/react-app/src/index.css
+++ b/react-app/src/index.css
@@ -20,11 +20,13 @@
   font-style: normal;
 }
 
-.homepage {
+.body {
   background-image: url("../src/static/bytebud-wallpaper.png");
   background-size: cover;
   height: 100vh;
   display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .login-page {
@@ -106,9 +108,20 @@
   margin-bottom: 10px;
   color: whitesmoke;
   font-weight: bolder;
+  cursor: pointer;
 }
 
 .register-group {
   display: inline-flex;
-  font-family: "Discord Thin";
+  font-family: "ByteBud";
+  font-size: 14px;
+}
+.label-register {
+  margin-right: 5px;
+  color: #a4a6a9;
+}
+
+.register {
+  color: rgb(0, 170, 255);
+  cursor: pointer;
 }
