--- a/react-app/src/components/ServerCreateModel/CreateServer.css
+++ b/react-app/src/components/ServerCreateModel/CreateServer.css
@@ -1,5 +1,5 @@
 @font-face {
-  font-family: "PixelPal";
+  font-family: "ByteBud";
   src: url("../../static/ggsans-Normal.ttf");
   font-weight: normal;
   font-style: normal;
@@ -42,7 +42,7 @@
 }
 
 .create-server-header {
-  font-family: "PixelPal";
+  font-family: "ByteBud";
   font-size: 20px;
   font-weight: 900;
   text-align: center;
@@ -51,7 +51,7 @@
 }
 
 .create-server-para {
-  font-family: "PixelPal";
+  font-family: "ByteBud";
   font-size: 15px;
   color: gray;
   text-align: center;
@@ -85,7 +85,7 @@
   background-color: #5865f2;
   border: none;
   border-radius: 3px;
-  font-family: "PixelPal";
+  font-family: "ByteBud";
   font-size: 16px;
   margin-bottom: 10px;
   color: whitesmoke;
