--- a/react-app/src/components/ServerCreateModel/CreateServer.css
+++ b/react-app/src/components/ServerCreateModel/CreateServer.css
@@ -69,7 +69,7 @@
 .create-server-form-label {
   font-family: "Discord Bold";
   font-size: 14px;
-  color: #2c2f33;
+  color: #313338;
   /* color: blue */
 }
 
