--- a/react-app/src/components/Servers/ServerSidebar.css
+++ b/react-app/src/components/Servers/ServerSidebar.css
@@ -24,7 +24,7 @@
   top: 0;
   left: 0;
   bottom: 0;
-  max-width: 64px;
+  max-width: 68px;
   /* adjust as needed */
   display: flex;
   background-color: #1e1f22;
@@ -34,9 +34,9 @@
 }
 
 .server-sidebar-ul {
-  margin-left: 8px;
+  margin-left: 10px;
   padding-left: 0px;
-  margin-right: 8px;
+  margin-right: 10px;
 }
 
 .server-sidebar-icon {
@@ -112,7 +112,7 @@
   border-radius: 40%;
 }
 
-#context-menu {
+#server-sidebar-context-menu {
   position: fixed;
   z-index: 1000;
   width: 150px;
@@ -121,7 +121,7 @@
   display: none;
 }
 
-.item {
+.server-sidebar-context-menu-item {
   font-family: "PixelPal";
   padding: 8px 10px;
   font-size: 15px;
@@ -130,10 +130,10 @@
   border-radius: inherit;
 }
 
-#context-menu.visible {
+#server-sidebar-context-menu.visible {
   display: block;
 }
 
-#context-menu .item:hover {
+#server-sidebar-context-menu .item .server-sidebar-context-menu-item:hover {
   background: #5865f2;
 }
