navigation added to existing account link

--- a/react-app/src/components/SignupFormPage/SignupForm.css
+++ b/react-app/src/components/SignupFormPage/SignupForm.css
@@ -120,6 +120,7 @@
   font-weight: bolder;
   font-size: 15px;
   margin-bottom: 10px;
+  cursor: pointer;
 }
 
 .signup-already-account {
@@ -127,6 +128,7 @@
   font-family: "ByteBud";
   font-size: 15px;
   margin-bottom: 20px;
+  text-decoration: none;
 }
 
 .signup-tos {
