--- a/react-app/src/components/SignupFormPage/SignupForm.css
+++ b/react-app/src/components/SignupFormPage/SignupForm.css
@@ -129,6 +129,11 @@
   font-size: 15px;
   margin-bottom: 20px;
   text-decoration: none;
+  width: fit-content;
+}
+
+.signup-already-account:hover {
+  text-decoration: underline;
 }
 
 .signup-tos {
