--- a/react-app/src/components/LoginPage/LoginPage.css
+++ b/react-app/src/components/LoginPage/LoginPage.css
@@ -16,74 +16,103 @@
   font-weight: normal;
   font-style: normal;
 }
-body {
-  background-image: url("../../static/bytebud-wallpaper.png");
-  background-size: cover;
-  height: 100vh;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+.wallpaper {
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: -3;
+
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 
 .login-page {
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 100%;
+  width: 100vw;
+  height: 100vh;
 }
+
 .login-box {
   background-color: #2c2f33;
   padding-left: 60px;
   padding-right: 60px;
   padding-top: 40px;
   padding-bottom: 85px;
-  height: 300px;
+  height: 400px;
   border-radius: 5px;
 }
+
 .login-headings {
   display: flex;
   flex-direction: column;
   align-items: center;
-  font-family: "ByteBud";
+  font-family: "PixelPal";
   margin-bottom: 20px;
 }
+
 .login-title {
   font-size: 28px;
   font-weight: bolder;
   color: whitesmoke;
   margin-bottom: 8px;
 }
+
 .login-subtitle {
   font-size: 16px;
   font-weight: bold;
   color: rgb(214, 214, 214);
   margin-bottom: 15px;
 }
+
+.error-msgs {
+  color: rgba(44, 125, 192, 0.837);
+  font-family: "PixelPal";
+}
+
 .login-form {
   display: flex;
   align-items: flex-start;
   flex-direction: column;
 }
+
 .form-input {
   margin-bottom: 15px;
+  padding-left: 10px;
+  background-color: #171819;
+  border: none;
+  border-radius: 3px;
+  font-size: 18px;
+  color: rgba(245, 245, 245, 0.886);
 }
+
+.form-input:focus {
+  outline: none;
+}
+
 .form-label {
   font-family: "Discord Bold";
   font-size: 14px;
   color: #acacac;
 }
+
 #emailOrPhone {
-  height: 30px;
+  height: 40px;
   margin-top: 5px;
   padding-right: 200px;
 }
+
 #password {
-  height: 30px;
+  height: 40px;
   margin-top: 5px;
   padding-right: 200px;
   margin-bottom: 20px;
 }
-.login-button {
+
+.login-button,
+.demo-button {
   height: 45px;
   width: 100%;
   background-color: #5865f2;
@@ -96,17 +125,24 @@ body {
   font-weight: bolder;
   cursor: pointer;
 }
+
 .register-group {
   display: inline-flex;
   font-family: "PixelPal";
   font-size: 14px;
 }
+
 .label-register {
   margin-right: 5px;
   color: #a4a6a9;
 }
+
 .register {
   color: rgb(0, 170, 255);
   cursor: pointer;
   text-decoration: none;
+}
+
+.register:hover {
+  text-decoration: underline;
 }
