--- a/react-app/src/components/EmojisModal/GetAllEmojis.css
+++ b/react-app/src/components/EmojisModal/GetAllEmojis.css
@@ -1,9 +1,136 @@
-.emojis-modal-button {
-  color: red;
-  border-color: red;
+@font-face {
+  font-family: "ByteBud";
+  src: url("../../static/ggsans-Normal.ttf");
+  font-weight: normal;
+  font-style: normal;
 }
 
-emoji-modal-container {
-  width: 300px;
-  height: 200px;
+@font-face {
+  font-family: "Discord Thin";
+  src: url("../../static/Uni\ Sans\ Thin.otf");
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "Discord Bold";
+  src: url("../../static/Uni\ Sans\ Heavy.otf");
+  font-weight: normal;
+  font-style: normal;
+}
+
+.emoji-modal-container {
+  width: 150px;
+  height: auto;
+  padding: 10px;
+  background-color: rgb(43, 45, 49); /* change to discord gray */
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  border-radius: 9px; /* why is the rounded corners white? */
+  position: relative;
+  right: 100px;
+  /* transform: translateX(40%); */
+  transform: translateY(-55%);
+}
+
+.emoji-modal-emoji {
+  padding: 2px;
+  height: 26px;
+  width: 26px;
+  margin: auto;
+  text-align: center;
+  cursor: pointer;
+  /* font-family: 'Discord Bold' */
+}
+
+.emoji-modal-emoji:hover {
+  background-color: rgb(65, 67, 74);
+}
+
+.emojismodalitem {
+  list-style: none;
+  color: rgb(219, 222, 225);
+  width: 50px;
+  /* to change into the icon later and remove reaction text*/
+  font-family: "ByteBud";
+  cursor: pointer;
+  background-color: rgb(47, 49, 54);
+}
+
+.emojismodalitem:hover {
+  background-color: rgb(66, 68, 74);
+}
+
+.tooltip-wrap .tooltip-content {
+  display: none;
+  position: absolute;
+  height: auto;
+  bottom: 30px;
+  right: 25px;
+  background-color: rgb(17, 18, 20);
+  width: 100px;
+}
+
+.tooltip-wrap:hover .tooltip-content {
+  display: block;
+  position: absolute;
+  color: rgb(219, 222, 225);
+  width: 100px;
+  height: 25px;
+  border-radius: 8px;
+  font-family: "ByteBud";
+  font-size: 13px;
+  padding-top: 6px;
+  padding-bottom: 6px;
+
+  text-align: center;
+  position: relative;
+  height: auto;
+  bottom: 60px;
+}
+
+.hidden {
+  display: none;
+}
+
+.emojismodal-menu-allemojis {
+  display: absolute;
+}
+
+.addreaction-container .fa-solid:hover {
+  color: rgb(238, 239, 242);
+}
+
+.addreaction-container > .fa-face-smile-beam,
+.addreaction-container > .fa-plus {
+  color: rgb(238, 239, 242);
+}
+
+.addreaction-container > .fa-face-smile-beam {
+  font-size: 20px;
+  padding-top: 5px;
+}
+
+.addreaction-container > .fa-plus {
+  font-size: 10px;
+}
+
+.addreaction-container:hover {
+  background-color: rgb(43, 45, 49);
+}
+
+.emojis-modal-container-container {
+  display: block;
+  position: absolute;
+  right: -50px;
+}
+
+.emojis-modal-container {
+  position: absolute;
+  right: 50px;
+  border-radius: 10px;
+  height: 30px;
+  width: 30px;
+  cursor: pointer;
 }
