--- a/react-app/src/components/LoginPage/LoginPage.css
+++ b/react-app/src/components/LoginPage/LoginPage.css
@@ -49,7 +49,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  font-family: "PixelPal";
+  font-family: "ByteBud";
   margin-bottom: 20px;
 }
 
@@ -69,7 +69,7 @@
 
 .error-msgs {
   color: rgba(44, 125, 192, 0.837);
-  font-family: "PixelPal";
+  font-family: "ByteBud";
 }
 
 .login-form {
@@ -118,7 +118,7 @@
   background-color: #5865f2;
   border: none;
   border-radius: 3px;
-  font-family: "PixelPal";
+  font-family: "ByteBud";
   font-size: 16px;
   margin-bottom: 10px;
   color: whitesmoke;
@@ -128,7 +128,7 @@
 
 .register-group {
   display: inline-flex;
-  font-family: "PixelPal";
+  font-family: "ByteBud";
   font-size: 14px;
 }
 
