--- a/react-app/src/components/Servers/ServerSidebar.css
+++ b/react-app/src/components/Servers/ServerSidebar.css
@@ -75,7 +75,7 @@
   font-weight: bold;
   text-align: center;
   color: white;
-  font-family: "PixelPal";
+  font-family: "ByteBud";
   text-decoration: none;
   cursor: pointer;
   transition: color 0.15s ease-out, background-color 0.15s ease-out,
@@ -122,7 +122,7 @@
 }
 
 .server-sidebar-context-menu-item {
-  font-family: "PixelPal";
+  font-family: "ByteBud";
   padding: 8px 10px;
   font-size: 15px;
   color: #b0b5bc;
