--- a/react-app/src/components/EmojisModal/GetAllEmojis.css
+++ b/react-app/src/components/EmojisModal/GetAllEmojis.css
@@ -22,7 +22,7 @@
 .emoji-modal-container {
   width: 150px;
   height: auto;
-  padding: 10px;
+  /* padding: 10px; */
   background-color: rgb(43, 45, 49); /* change to discord gray */
   display: flex;
   flex-wrap: wrap;
@@ -35,7 +35,7 @@
 }
 
 .emoji-modal-emoji {
-  padding: 2px;
+  /* padding: 2px; */
   height: 26px;
   width: 26px;
   margin: auto;
@@ -64,10 +64,10 @@
 
 .tooltip-wrap .tooltip-content {
   display: none;
-  position: absolute;
+  position: relative;
   height: auto;
-  bottom: 30px;
-  right: 25px;
+  bottom: 60px;
+  right: 38px;
   background-color: rgb(17, 18, 20);
   width: 100px;
 }
