--- a/react-app/src/components/MessageForm/MessageForm.css
+++ b/react-app/src/components/MessageForm/MessageForm.css
@@ -21,11 +21,8 @@
 
 .message-form-background {
   background-color: #313338;
-  position: fixed;
-  bottom: 0;
-  right: 0px;
-  left: 298px;
   box-sizing: border-box;
+  width: 800px;
   padding: 0px 20px 20px;
 }
 
