--- a/react-app/src/components/FriendsList/FriendsList.css
+++ b/react-app/src/components/FriendsList/FriendsList.css
@@ -26,20 +26,28 @@
 .friendslist-container {
   display: flex;
   flex-direction: column;
-  /* border: red 2px solid; */
   height: 800px;
-  margin-top: auto;
-  margin-bottom: auto;
+  /* margin-top: auto;
+  margin-bottom:auto; */
+  margin-left: auto;
   width: 1500px;
+  /* width: 100%;
+  height: 100%; */
   background-color: rgb(49, 51, 56);
 }
 
+.friendslist-header-container {
+  display: flex;
+  align-items: center;
+  padding-bottom: 5px;
+  border-bottom: 0.5px rgb(38, 39, 43) solid;
+}
+
 .friendslist-user-container {
-  /* border: red 2px solid; */
   align-content: center;
-  flex-direction: row;
-  width: 1300px;
-  height: 40px;
+  width: 100%;
+  float: left;
+  height: 50px;
   margin-top: 10px;
   margin-left: auto;
   margin-right: auto;
@@ -50,29 +58,38 @@
 
 .friendslist-user-container:hover {
   background-color: rgb(57, 59, 65);
+  border-radius: 10px;
 }
 
 .friendslist-friends,
 .friendslist-all,
 .friendslist-username {
-  font-family: "PixelPal";
+  margin-left: 20px;
+  font-family: "ByteBud";
   color: rgb(238, 239, 242);
 }
 
 .friendslist-friends {
   font-size: 25px;
   margin-left: 50px;
+  margin-left: 15px;
+  padding-top: 5px;
 }
 
 .friendslist-all {
   margin-left: 25px;
+  margin-top: 8px;
+  text-align: center;
+  border-radius: 8px;
+  width: 45px;
+  background-color: rgb(66, 68, 74);
 }
-
 .friendslist-profile-image {
   width: 40px;
   height: 40px;
   border-radius: 50%;
   overflow: hidden;
+  margin-left: 20px;
   /* margin-bottom: 1em; */
 
   transition: color 0.15s ease-out, background-color 0.15s ease-out,
@@ -92,4 +109,11 @@
 
 .friendslist-username {
   margin-left: 10px;
+}
+
+.friendslist-header-container i {
+  color: rgb(238, 239, 242);
+  margin-left: 20px;
+  font-size: 22px;
+  margin-top: 4px;
 }
