--- a/react-app/src/components/ChannelSideBar/channels.css
+++ b/react-app/src/components/ChannelSideBar/channels.css
@@ -45,12 +45,14 @@
   justify-content: space-between;
 }
 
-.plus-symbol {
+.modal-new-channel button {
   margin-right: 15px;
   color: #949ba4;
   font-size: 25px;
   padding-bottom: 6px;
   cursor: pointer;
+  background: transparent;
+  border: none;
 }
 
 .plus-symbol:hover {
