--- a/react-app/src/components/FriendsList/FriendsList.css
+++ b/react-app/src/components/FriendsList/FriendsList.css
@@ -70,7 +70,7 @@
   padding-top: 10px;
   height: 30px;
   color: rgb(179, 184, 191);
-  font-family: "PixelPal";
+  font-family: "ByteBud";
 }
 
 .friendslist-friends,
