--- a/react-app/src/components/ChannelSideBar/channels.css
+++ b/react-app/src/components/ChannelSideBar/channels.css
@@ -54,8 +54,7 @@
   background: transparent;
   border: none;
 }
-
-.plus-symbol:hover {
+.modal-new-channel button:hover {
   color: whitesmoke;
 }
 .text-channels {
