--- a/react-app/src/components/FriendsList/FriendsList.css
+++ b/react-app/src/components/FriendsList/FriendsList.css
@@ -130,3 +130,34 @@
   font-size: 22px;
   margin-top: 4px;
 }
+
+.friendslist-user-container i {
+  color: rgb(181, 186, 193);
+  padding: 10px;
+}
+
+.friendslist-user-container {
+  display: flex;
+  flex-direction: row;
+  /* margin-right: 10px; */
+}
+
+.friendslist-chat-icon {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  margin-right: 10px;
+}
+
+.friendslist-chat-icon div {
+  background-color: rgb(43, 45, 49);
+  border-radius: 30px;
+  text-align: center;
+  margin-right: 5px;
+  margin-left: 5px;
+  width: 40px;
+}
+
+.fa-solid:hover {
+  color: rgb(238, 239, 242);
+}
