--- a/react-app/src/components/MessageItem/MessageItem.css
+++ b/react-app/src/components/MessageItem/MessageItem.css
@@ -27,19 +27,20 @@
 
 .message-left-side {
   display: flex;
-  align-items: center;
+  align-items: flex-start;
 }
 
 .message-profile-pic {
   height: 40px;
   width: 40px;
   border-radius: 50px;
+  margin-top: 4px;
   margin-right: 10px;
 }
 
 .message-center {
   overflow-wrap: break-word;
-  width: 100%;
+  width: 80%;
 }
 
 .message-sender {
