finsh adding user menu and updatye sytling to fill screen

--- a/react-app/src/components/MessageItem/MessageItem.css
+++ b/react-app/src/components/MessageItem/MessageItem.css
@@ -18,8 +18,13 @@
 }
 .message-item {
   display: flex;
+  justify-content: space-between;
   width: 100%;
   border-radius: 5px;
+}
+
+.message-left-and-center {
+  display: flex;
 }
 .message-item:hover {
   background-color: #5e6066;
