--- a/react-app/src/components/ChannelMessages/ChannelMessages.css
+++ b/react-app/src/components/ChannelMessages/ChannelMessages.css
@@ -53,20 +53,26 @@
   color: #a9bac1;
   margin: 0px 0px 20px;
 }
+
 .channel-messages-container {
   background-color: #313338;
+  position: fixed;
+  top: 0;
+  left: 298px;
+  right: 0;
   padding: 15px;
   margin: 0;
-  height: 65vw;
-  width: 800px;
+  height: 95vh;
   box-sizing: border-box;
   overflow-y: scroll;
   -ms-overflow-style: none; /* Internet Explorer 10+ */
   scrollbar-width: none; /* Firefox */
 }
+
 .channel-messages-container::-webkit-scrollbar {
   display: none; /* Safari and Chrome */
 }
+
 .message-item-container {
   padding-bottom: 15px;
 }
