--- a/react-app/src/context/Modal.css
+++ b/react-app/src/context/Modal.css
@@ -16,9 +16,12 @@
   left: 0;
   bottom: 0;
   background-color: rgba(0, 0, 0, 0.7);
+  background-color: rgba(0, 0, 0, 0.8);
 }
 
 #modal-content {
   position: absolute;
-  background-color:white;
+  background-color: white;
+  background-color: transparent;
+  border: none;
 }
