--- a/react-app/src/components/ServerCreateModel/ServerCreate.css
+++ b/react-app/src/components/ServerCreateModel/ServerCreate.css
@@ -87,16 +87,28 @@
   cursor: pointer;
 }
 
+.disabled-btn {
+  background-color: gray;
+  height: 45px;
+  width: 100%;
+  border: none;
+  border-radius: 3px;
+  font-family: "PixelPal";
+  font-size: 16px;
+  margin-bottom: 10px;
+  color: white;
+  font-weight: bolder;
+  cursor: pointer;
+}
+
+.create-server-error {
+  color: rgba(44, 125, 192, 0.837);
+  font-family: "PixelPal";
+}
+
 #name,
 #server_picture {
   height: 20px;
   width: 100%;
   margin-top: 5px;
-}
-
-#description {
-  height: 30px;
-  width: 100%;
-  margin-top: 5px;
-  /* padding-right: 125px */
 }
