--- a/react-app/src/components/CreateChannel/create-channel.css
+++ b/react-app/src/components/CreateChannel/create-channel.css
@@ -109,7 +109,7 @@
 .text-radio-desc {
   font-size: 14px;
   color: #adb2ba;
-  font-family: "PixelPal";
+  font-family: "ByteBud";
 }
 
 input[type="radio"] {
@@ -130,7 +130,7 @@ input[type="radio"] {
   border: none;
   margin-bottom: 10px;
   font-size: 16px;
-  font-family: "PixelPal";
+  font-family: "ByteBud";
   border-radius: 5px;
   color: rgb(192, 192, 192);
 }
@@ -149,4 +149,44 @@ input[type="radio"] {
   position: fixed;
   margin-top: 292px;
   margin-left: 15px;
+}
+
+.channel-submit-div {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  padding-top: 15px;
+  padding-bottom: 15px;
+}
+
+.modal-cancel {
+  color: whitesmoke;
+  background-color: none;
+  cursor: pointer;
+  font-family: "ByteBud";
+  font-size: 14px;
+  font-weight: bolder;
+}
+
+.modal-submit {
+  margin-right: 15px;
+  background-color: #5b65cf;
+  border: none;
+  border-radius: 4px;
+  height: 40px;
+  width: 130px;
+  color: whitesmoke;
+  font-family: "ByteBud";
+  font-weight: bolder;
+  font-size: 14px;
+  margin-left: 30px;
+  cursor: pointer;
+}
+
+.modal-cancel:hover {
+  text-decoration: underline;
+}
+
+.modal-submit:hover {
+  background-color: #4d56b3;
 }
