--- a/react-app/src/components/ChannelSideBar/channels.css
+++ b/react-app/src/components/ChannelSideBar/channels.css
@@ -97,3 +97,24 @@
   width: 200px;
   border-radius: 3px;
 }
+
+.channel-mapping {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.channel-mapping button {
+  font-size: 14px;
+  position: fixed;
+  color: #60636b;
+  left: 258px;
+  margin-top: 6px;
+  background-color: transparent;
+  border: none;
+}
+
+.channel-mapping button:hover {
+  color: #808490;
+}
