--- a/react-app/src/components/ServerCreateModel/ServerCreate.css
+++ b/react-app/src/components/ServerCreateModel/ServerCreate.css
@@ -93,7 +93,7 @@
   width: 100%;
   border: none;
   border-radius: 3px;
-  font-family: "PixelPal";
+  font-family: "ByteBud";
   font-size: 16px;
   margin-bottom: 10px;
   color: white;
@@ -103,7 +103,7 @@
 
 .create-server-error {
   color: rgba(44, 125, 192, 0.837);
-  font-family: "PixelPal";
+  font-family: "ByteBud";
 }
 
 #name,
