--- a/react-app/src/components/ChannelSideBar/channels.css
+++ b/react-app/src/components/ChannelSideBar/channels.css
@@ -23,6 +23,21 @@
   left: 68px;
   height: 100vh;
   width: 230px;
+  overflow-y: scroll;
+}
+.channel-sidebar::-webkit-scrollbar {
+  width: 0;
+  height: 0;
+}
+
+.channel-sidebar:hover::-webkit-scrollbar {
+  width: 5px;
+  height: 6px;
+  background-color: #222;
+}
+
+.channel-sidebar:hover::-webkit-scrollbar-thumb {
+  background-color: rgb(26, 26, 26);
 }
 .server-name-container {
   margin-bottom: 15px;
@@ -113,7 +128,6 @@
 
 .channel-mapping button {
   font-size: 14px;
-  position: fixed;
   color: #60636b;
   left: 258px;
   background-color: transparent;
