--- a/react-app/src/components/ChannelSideBar/channels.css
+++ b/react-app/src/components/ChannelSideBar/channels.css
@@ -93,6 +93,8 @@
   display: flex;
   align-items: center;
   text-decoration: none;
+  width: 200px;
+  justify-content: space-between;
 }
 
 .channel-divs:hover {
