--- a/react-app/src/components/EmojisModal/GetAllEmojis.css
+++ b/react-app/src/components/EmojisModal/GetAllEmojis.css
@@ -30,6 +30,8 @@
   border-radius: 9px; /* why is the rounded corners white? */
   position: relative;
   right: 100px;
+  position: relative;
+  right: 100px;
   /* transform: translateX(40%); */
   transform: translateY(-55%);
 }
@@ -66,8 +68,8 @@
   display: none;
   position: relative;
   height: auto;
-  bottom: 60px;
-  right: 38px;
+  bottom: 30px;
+  right: 25px;
   background-color: rgb(17, 18, 20);
   width: 100px;
 }
