--- a/react-app/src/components/ChannelMessages/ChannelMessages.css
+++ b/react-app/src/components/ChannelMessages/ChannelMessages.css
@@ -19,7 +19,7 @@
 .channel-messages-top {
   display: flex;
   flex-direction: column;
-  align-items: start;
+  align-items: flex-start;
   border-bottom: solid 1px #a9bac181;
   margin-bottom: 15px;
 }
@@ -57,9 +57,10 @@
 .channel-messages-container {
   background-color: #313338;
   position: fixed;
-  top: 0;
+  top: 51px;
   left: 298px;
-  right: 0;
+  right: 232px;
+  bottom: 49px;
   padding: 15px;
   margin: 0;
   height: 95vh;
