--- a/react-app/src/components/ChannelTopBar/ChannelTopBar.css
+++ b/react-app/src/components/ChannelTopBar/ChannelTopBar.css
@@ -19,64 +19,57 @@
   font-style: normal;
 }
 
-.user-menu-container {
-  background-color: #232428;
+.channel-topbar-container {
+  background-color: #313338;
+  position: fixed;
+  top: 0;
+  left: 298px;
+  right: 0;
+  height: 50px;
   display: flex;
   justify-content: space-between;
-  align-items: center;
-  position: fixed;
-  bottom: 0;
-  left: 68px;
-  box-sizing: border-box;
-  width: 230px;
-  padding: 5px;
+  border-bottom: 1px rgb(35, 35, 35) solid;
 }
 
-.user-menu-left-side {
+.channel-topbar-left-side {
   display: flex;
   align-items: center;
-  padding: 0px 10px 0px 5px;
-  border-radius: 5px;
+  margin-left: 15px;
 }
 
-.user-menu-left-side:hover {
-  background-color: #3d3e41;
+.channel-name {
+  display: flex;
+  align-items: center;
 }
 
-.user-menu-profile-pic {
-  height: 40px;
-  width: 40px;
-  border-radius: 50px;
-  margin-top: 4px;
+.channel-topbar-name {
+  font-family: "ByteBud";
+  font-weight: bolder;
+  font-size: 16px;
+  color: white;
+}
+
+.channel-name .fa-hashtag {
+  font-family: "ByteBud";
+  margin-right: 10px;
+  font-size: 24px;
+  color: #a9bac1;
+}
+
+.channel-topbar-right-side {
+  display: flex;
+  align-items: center;
   margin-right: 10px;
 }
 
-.user-menu-username {
-  font-family: "ByteBud";
-  font-weight: bold;
-  color: white;
-  margin: 0;
-}
-
-.user-tag {
-  font-family: "ByteBud";
-  font-size: 12px;
-  color: white;
-  margin: 0;
-}
-
-.logout-button {
-  font-family: "ByteBud";
+.channel-topbar-right-side button {
   color: white;
   border: none;
   border-radius: 5px;
   outline: none;
   background: none;
-  padding: 10px;
-  margin-right: 10px;
 }
 
-.logout-button:hover {
+.channel-topbar-right-side button:hover {
   cursor: pointer;
-  background-color: #3d3e41;
 }
