--- a/react-app/src/components/MessageForm/MessageForm.css
+++ b/react-app/src/components/MessageForm/MessageForm.css
@@ -23,7 +23,7 @@
   background-color: #313338;
   position: fixed;
   bottom: 0;
-  right: 0;
+  right: 232px;
   left: 298px;
   box-sizing: border-box;
   padding: 0px 20px 20px;
