--- a/react-app/src/components/MessageForm/MessageForm.css
+++ b/react-app/src/components/MessageForm/MessageForm.css
@@ -23,6 +23,7 @@
   background-color: #313338;
   position: fixed;
   bottom: 0;
+  right: 0px;
   right: 232px;
   left: 298px;
   box-sizing: border-box;
