--- a/react-app/src/components/ServerCreateModel/ServerCreate.css
+++ b/react-app/src/components/ServerCreateModel/ServerCreate.css
@@ -20,19 +20,31 @@
 }
 
 .create-server-page {
-  max-width: 300px;
-  max-height: 500px;
+  display: flex;
+  flex-direction: column;
+  background-color: #25262b;
+  max-width: 400px;
+  max-height: 250px;
+  border: 1px black solid;
   padding-left: 60px;
   padding-right: 60px;
   padding-top: 40px;
   padding-bottom: 90px;
-  height: 300px;
-  border-radius: 5px;
+  border-radius: 10px;
 }
 
 .create-server-modal {
   display: flex;
   flex-direction: column;
+  background-color: #25262b;
+  max-width: 400px;
+  max-height: 300px;
+  border: 1px black solid;
+  padding-left: 60px;
+  padding-right: 60px;
+  padding-top: 40px;
+  padding-bottom: 90px;
+  border-radius: 10px;
 }
 
 .create-server-header {
@@ -40,6 +52,7 @@
   font-size: 20px;
   font-weight: 900;
   text-align: center;
+  color: whitesmoke;
   margin-top: 0px;
   margin-bottom: 0px;
 }
@@ -67,10 +80,10 @@
 }
 
 .create-server-form-label {
-  font-family: "Discord Bold";
-  font-size: 14px;
-  color: #313338;
-  /* color: blue */
+  font-family: "ByteBud";
+  color: #adb2ba;
+  font-size: 15px;
+  margin-bottom: 5px;
 }
 
 .create-server-form-button {
