--- a/react-app/src/components/ServerCreateModel/ServerCreate.css
+++ b/react-app/src/components/ServerCreateModel/ServerCreate.css
@@ -100,6 +100,9 @@
   cursor: pointer;
 }
 
+.create-server-form-button:hover {
+  background-color: #6772ed;
+}
 .disabled-btn {
   background-color: gray;
   height: 45px;
