--- a/react-app/src/components/ServerDeleteModal/ServerDelete.css
+++ b/react-app/src/components/ServerDeleteModal/ServerDelete.css
@@ -19,7 +19,7 @@
   font-style: normal;
 }
 
-.create-server-page {
+.delete-server-page {
   max-width: 300px;
   max-height: 500px;
   padding-left: 60px;
@@ -30,13 +30,23 @@
   border-radius: 5px;
 }
 
-.create-server-modal {
+.delete-server-modal {
   display: flex;
   flex-direction: column;
+  background-color: #25262b;
+  max-width: 400px;
+  max-height: 300px;
+  border: 1px black solid;
+  padding-left: 60px;
+  padding-right: 60px;
+  padding-top: 40px;
+  padding-bottom: 90px;
+  border-radius: 10px;
 }
 
-.create-server-header {
+.delete-server-header {
   font-family: "ByteBud";
+  color: whitesmoke;
   font-size: 20px;
   font-weight: 900;
   text-align: center;
@@ -44,7 +54,7 @@
   margin-bottom: 0px;
 }
 
-.create-server-para {
+.delete-server-para {
   font-family: "ByteBud";
   font-size: 15px;
   color: gray;
@@ -52,13 +62,56 @@
   margin-top: 5px;
 }
 
-.create-server-form-group {
+.delete-form-cancel {
+  color: whitesmoke;
+  font-family: "ByteBud";
+  font-weight: bolder;
+  cursor: pointer;
+}
+
+.delete-form-delete {
+  height: 35px;
+  border: none;
+  border-radius: 5px;
+  background-color: #c84040;
+  font-family: "ByteBud";
+  color: whitesmoke;
+  font-weight: bolder;
+  padding-left: 10px;
+  padding-right: 10px;
+  cursor: pointer;
+}
+
+.delete-form-cancel:hover {
+  text-decoration: underline;
+  color: white;
+}
+
+.delete-server-form-button {
+  height: 45px;
+  width: 100%;
+  background-color: #5865f2;
+  border: none;
+  border-radius: 3px;
+  font-family: "ByteBud";
+  font-size: 16px;
+  margin-bottom: 10px;
+  color: whitesmoke;
+  font-weight: bolder;
+  cursor: pointer;
+}
+
+.delete-server-form-button:hover {
+  background-color: #6772ed;
+}
+
+.delete-server-form-group {
   display: flex;
   align-items: flex-start;
   flex-direction: column;
 }
 
-.create-server-form-input {
+.delete-server-form-input {
   margin-bottom: 15px;
   border-radius: 5px;
   padding-top: 0;
@@ -66,13 +119,13 @@
   border: 1px solid lightgray;
 }
 
-.create-server-form-label {
+.delete-server-form-label {
   font-family: "Discord Bold";
   font-size: 14px;
   color: #313338;
 }
 
-.create-server-form-button {
+.delete-server-form-button {
   height: 45px;
   width: 100%;
   background-color: #5865f2;
