--- a/react-app/src/components/FriendsList/FriendsList.css
+++ b/react-app/src/components/FriendsList/FriendsList.css
@@ -80,7 +80,8 @@
 
 .friendslist-friends,
 .friendslist-all,
-.friendslist-username {
+.friendslist-username .friendslist-online,
+.friendslist-tag {
   margin-left: 20px;
   font-family: "ByteBud";
   color: rgb(238, 239, 242);
@@ -297,4 +298,23 @@
 .fa-plus {
   color: rgb(181, 186, 193);
   margin-right: 15px;
+}
+
+.friendslist-tag {
+  display: none;
+}
+
+.friendslist-user-container:hover .friendslist-tag {
+  display: block;
+  margin-left: 3px;
+  color: rgb(181, 186, 193);
+}
+
+.icon-hover > i:hover {
+  color: rgb(212, 218, 227);
+}
+
+.friendslist-channel-dm-container > i:hover {
+  color: rgb(212, 218, 227);
+  cursor: pointer;
 }
