add styling to createChannel

--- a/react-app/src/components/CreateChannel/create-channel.css
+++ b/react-app/src/components/CreateChannel/create-channel.css
@@ -67,6 +67,10 @@
   flex-direction: column;
 }
 
+.text-radio-option.voice {
+  margin-right: 10px;
+}
+
 .radio-button {
   display: flex;
   flex-direction: row;
@@ -97,13 +101,17 @@
   background-color: #42444c;
 }
 
-.radio-button .fa-hashtag,
-.radio-button-na .fa-volume-high {
-  margin-right: 10px;
+.radio-button .fa-hashtag {
+  margin-right: 15px;
   font-size: 25px;
   color: #adb2ba;
-  margin-right: 15px;
-  padding-left: 15px;
+  margin-left: 10px;
+}
+
+.fa-solid.fa-volume-high {
+  font-size: 25px;
+  color: #adb2ba;
+  margin-left: 10px;
 }
 
 .text-radio-desc {
