--- a/react-app/src/components/ChannelSideBar/channels.css
+++ b/react-app/src/components/ChannelSideBar/channels.css
@@ -39,12 +39,16 @@
 .channel-sidebar:hover::-webkit-scrollbar-thumb {
   background-color: rgb(26, 26, 26);
 }
+
 .server-name-container {
+  display: flex;
+  justify-content: space-between;
   margin-bottom: 15px;
   border-bottom: 1px rgb(35, 35, 35) solid;
-  display: flex;
+  margin-left: 15px;
   align-items: center;
   height: 50px;
+  width: 200px;
 }
 .server-name-text {
   font-family: "ByteBud";
@@ -147,4 +151,41 @@
   transform: scale(1.2);
   transition: transform 0.2s ease-in-out;
   cursor: pointer;
+}
+
+.server-setting-btn {
+  color: #60636b;
+  padding-left: 56px;
+}
+
+.server-setting-btn:hover {
+  color: #808490;
+  transform: scale(1.1);
+  transition: transform 0.2s ease-in-out;
+  cursor: pointer;
+}
+
+.server-setting-dropdown {
+  position: relative;
+  display: inline-block;
+  margin-top: 20px;
+}
+
+.server-dropdown-content {
+  /* display: none; */
+  position: absolute;
+  background-color: #f1f1f1;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  z-index: 1;
+  right: 0;
+  left: auto;
+}
+
+.server-dropdown-content button {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+  background-color: blue;
 }
