completed open and close of setting menu

--- a/react-app/src/components/ChannelSideBar/channels.css
+++ b/react-app/src/components/ChannelSideBar/channels.css
@@ -172,7 +172,7 @@
 }
 
 .server-dropdown-content {
-  display: none;
+  /* display: none; */
   position: absolute;
   background-color: #131416;
   min-width: 140px;
@@ -202,6 +202,6 @@
   color: whitesmoke;
 }
 
-.visible {
-  display: block;
+.hidden {
+  display: none;
 }
