removed console.logs

--- a/react-app/src/components/MessageItem/Reaction.css
+++ b/react-app/src/components/MessageItem/Reaction.css
@@ -37,7 +37,7 @@
   border-radius: 10px;
   border: 2px rgb(88, 101, 242) solid;
   background-color: rgb(56, 58, 84);
-  font-family: "PixelPal";
+  font-family: "ByteBud";
   color: rgb(238, 239, 242);
   cursor: pointer;
   margin-right: 8px;
