--- a/react-app/src/components/ChannelSideBar/channels.css
+++ b/react-app/src/components/ChannelSideBar/channels.css
@@ -185,7 +185,7 @@
 }
 
 .server-dropdown-content button {
-  font-family: "PixelPal";
+  font-family: "ByteBud";
   color: #808490;
   /* padding: 12px 16px; */
   text-decoration: none;
