--- a/react-app/src/components/MessageForm/MessageForm.css
+++ b/react-app/src/components/MessageForm/MessageForm.css
@@ -54,8 +54,8 @@
 
   width: 100%;
   height: 25px;
-  /* padding-top:5px;
-    margin-top: 5px; */
+  padding-top: 5px;
+  margin-top: 5px;
   background: none;
   border: none;
   padding: 10px 0px 10px;
