add scroller anchor to channel messages

--- a/react-app/src/components/ChannelMessages/ChannelMessages.css
+++ b/react-app/src/components/ChannelMessages/ChannelMessages.css
@@ -77,3 +77,12 @@
 .message-item-container {
   padding-bottom: 15px;
 }
+
+#scroller * {
+  overflow-anchor: none;
+}
+
+#anchor {
+  overflow-anchor: auto;
+  height: 1px;
+}
