--- a/react-app/src/components/ChannelTopBar/ChannelTopBar.css
+++ b/react-app/src/components/ChannelTopBar/ChannelTopBar.css
@@ -73,3 +73,8 @@
 .channel-topbar-right-side button:hover {
   cursor: pointer;
 }
+
+.threads-button:hover {
+  transform: scale(1.1);
+  transition: transform 0.2s ease-in-out;
+}
