signup bug fixed with redirection upon submit

--- a/react-app/src/components/FriendsList/FriendsList.css
+++ b/react-app/src/components/FriendsList/FriendsList.css
@@ -186,6 +186,10 @@
   width: 40px;
 }
 
+.friendslist-chat-icon div:hover {
+  cursor: pointer;
+}
+
 .fa-solid:hover {
   color: rgb(238, 239, 242);
 }
