--- a/react-app/src/components/SplashPage/SplashPage.css
+++ b/react-app/src/components/SplashPage/SplashPage.css
@@ -1,3 +1,10 @@
+@font-face {
+  font-family: "ByteBud";
+  src: url("../../static/ggsans-Normal.ttf");
+  font-weight: normal;
+  font-style: normal;
+}
+
 .splash-top {
   border: 2px solid poink;
   position: fixed;
@@ -62,7 +69,7 @@
 }
 
 .demo-login-button {
-  font-family: "Noto Sans", sans-serif;
+  font-family: "ByteBud";
   color: white;
 
   background: none;
@@ -83,9 +90,15 @@
 }
 
 .splash-login-button {
-  background-color: white;
+  background-color: rgb(25, 25, 25);
+  font-size: 15px;
+  color: rgb(218, 99, 218);
+  font-family: "ByteBud";
 
-  padding: 7px 16px 7px;
+  padding-left: 50px;
+  padding-right: 50px;
+  padding-top: 10px;
+  padding-bottom: 10px;
   margin-right: 40px;
 
   border: 1px solid rgba(255, 255, 255, 0);
@@ -106,7 +119,7 @@
 }
 
 .imagine-text {
-  font-family: "Noto Sans", sans-serif;
+  font-family: "ByteBud";
   color: white;
   font-weight: bold;
   font-size: 56px;
@@ -115,7 +128,7 @@
 }
 
 .where-you-can-text {
-  font-family: "Noto Sans", sans-serif;
+  font-family: "ByteBud";
   color: white;
   font-size: 24px;
 
@@ -123,12 +136,12 @@
 }
 
 .splash-open-button {
-  font-family: "Noto Sans", sans-serif;
-  color: white;
+  font-family: "ByteBud";
+  color: rgb(168, 150, 237);
   font-size: 20px;
 
-  background: #23272a;
-  border: 1px solid rgba(255, 255, 255, 0);
+  background: #000000c1;
+  border: 0.5px solid rgba(203, 203, 203, 0.681);
   border-radius: 40px;
 
   padding: 16px 32px 16px;
@@ -140,23 +153,19 @@
 }
 
 .splash-middle {
-  background-color: white;
-  position: fixed;
-  top: 500px;
-  bottom: 250px;
-  left: 0;
-
+  background-color: rgb(21, 21, 21);
   width: 100%;
+  padding-bottom: 100px;
+  padding-top: 60px;
 }
 
 .meet-developers-text {
-  font-family: "Noto Sans", sans-serif;
+  font-family: "ByteBud";
   font-size: 48px;
-  color: #23272a;
+  color: #dbdbdb;
 
   padding: 20px 0px 20px;
   margin: 0;
-
   text-align: center;
 }
 
