--- a/react-app/src/components/SplashPage/SplashPage.css
+++ b/react-app/src/components/SplashPage/SplashPage.css
@@ -155,8 +155,11 @@
 .splash-middle {
   background-color: rgb(21, 21, 21);
   width: 100%;
-  padding-bottom: 100px;
-  padding-top: 60px;
+  padding-bottom: 70px;
+  padding-top: 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .meet-developers-text {
@@ -171,10 +174,13 @@
 
 .devs-container {
   display: flex;
+  flex-direction: row;
+  align-items: center;
   justify-content: center;
   flex-wrap: wrap;
 
   margin: 0px 40px 0px;
+  width: 70%;
 }
 
 .portfolio-button {
