--- a/react-app/src/components/ChannelSideBar/channels.css
+++ b/react-app/src/components/ChannelSideBar/channels.css
@@ -23,7 +23,7 @@
   left: 68px;
   height: 100vh;
   width: 230px;
-  overflow-y: scroll;
+  overflow-y: auto;
 }
 .channel-sidebar::-webkit-scrollbar {
   width: 0;
@@ -31,13 +31,13 @@
 }
 
 .channel-sidebar:hover::-webkit-scrollbar {
-  width: 5px;
-  height: 6px;
-  background-color: #222;
+  width: 0;
+  height: 0;
+  background-color: transparent;
 }
 
 .channel-sidebar:hover::-webkit-scrollbar-thumb {
-  background-color: rgb(26, 26, 26);
+  background-color: transparent;
 }
 
 .server-name-container {
