updated some routing

--- a/react-app/src/components/FriendsList/FriendsList.css
+++ b/react-app/src/components/FriendsList/FriendsList.css
@@ -251,7 +251,6 @@
   padding-top: 10px;
   padding-left: 10px;
   height: 35px;
-  background-color: rgb(63, 66, 72);
   border-radius: 5px;
   /* align-items: center; */
 }
@@ -262,6 +261,11 @@
   margin-top: 3px;
   margin-right: 10px;
   margin-left: 5px;
+}
+
+.friendslist-channel-friendscontainer:hover {
+  background-color: rgb(63, 66, 72);
+  cursor: pointer;
 }
 
 .friendslist-search-div {
@@ -349,4 +353,12 @@
   border-radius: 10px;
   cursor: pointer;
   color: rgb(238, 239, 242);
+}
+
+.friendlist-dm-link {
+  text-decoration: none;
+}
+
+.friendlist-dm-link:active {
+  background-color: rgb(57, 59, 65);
 }
