--- a/react-app/src/components/FriendsList/FriendsList.css
+++ b/react-app/src/components/FriendsList/FriendsList.css
@@ -359,6 +359,7 @@
   text-decoration: none;
 }
 
-.friendlist-dm-link:active {
+.friendslist-dm-link.active {
   background-color: rgb(57, 59, 65);
+  border-radius: 10px;
 }
