--- a/react-app/src/components/DirectMessages/DirectMessages.css
+++ b/react-app/src/components/DirectMessages/DirectMessages.css
@@ -14,7 +14,6 @@
   background-color: rgb(49,51,56);
   border-bottom: 1px rgb(30,32,36) solid;
   font-family: ByteBud';
-
 }
 
 
@@ -27,5 +26,24 @@
   background-color: rgb(49,51,56);
   color: rgb(179,184,191);
   font-family: 'ByteBud';
+
+.dm-upper-user-container {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  height: 50px;
+}
+
+.dm-upper-username {
+  color: rgb(193, 198, 205);
+  font-family: 'PixelPal';
+  margin-left: 8px;
+}
+
+.dm-upper-at {
+  color: rgb(179,184,191);
+  font-size: 25px;
+  margin-left: 20px;
+}
 
 }
