--- a/react-app/src/components/DirectMessages/DirectMessages.css
+++ b/react-app/src/components/DirectMessages/DirectMessages.css
@@ -28,7 +28,7 @@
   top: 51px;
   left: 298px;
   right: 0px;
-  bottom: 49px;
+  bottom: 60px;
   overflow-y: scroll;
   background-color: rgb(49, 51, 56);
   color: rgb(179, 184, 191);
@@ -66,11 +66,13 @@
   align-items: center;
   height: 50px;
 }
+
 .dm-upper-username {
   color: rgb(193, 198, 205);
-  font-family: "PixelPal";
+  font-family: "ByteBud";
   margin-left: 8px;
 }
+
 .dm-upper-at {
   color: rgb(179, 184, 191);
   font-size: 25px;
@@ -101,18 +103,21 @@
   flex-direction: row;
   align-items: center;
   margin-bottom: 15px;
-  margin-bottom: 10px;
   margin-top: 5px;
   margin-left: 5px;
   margin-right: 5px;
   overflow-y: scroll;
 }
 
+.dm-msg-container:hover {
+  background-color: rgb(45, 48, 53);
+}
+
 .dm-msg-user {
   display: flex;
   flex-direction: row;
   align-items: flex-end;
-  font-family: "PixelPal";
+  font-family: "ByteBud";
   font-size: 16px;
   color: white;
 }
@@ -130,11 +135,6 @@
   color: #a9bac1;
 }
 
-.dm-msg-content {
-  font-size: 16px;
-  color: white;
-}
-
 .dm-msg-center {
   display: flex;
   width: 80%;
@@ -145,6 +145,114 @@
   padding-bottom: 8px;
 }
 
+.dm-msg-content {
+  font-size: 16px;
+  color: white;
+}
+
 .dm-msg-right {
   margin-top: -30px;
+}
+
+.dm-msg-form-background {
+  background-color: #313338;
+  position: fixed;
+  bottom: 0;
+  right: 0px;
+  left: 298px;
+  box-sizing: border-box;
+  padding: 0px 20px 20px;
+}
+
+.dm-msg-form-container {
+  background-color: #383a40;
+  padding: 0px 0px 0px 10px;
+  border-radius: 5px;
+}
+
+.dm-msg-form {
+  display: flex;
+  align-items: center;
+  margin-top: 10px;
+}
+
+.dm-msg-form-right {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.dm-msg-form-text {
+  font-family: "ByteBud";
+  font-weight: bold;
+  font-size: 18px;
+}
+
+.dm-msg-form-input {
+  font-family: "ByteBud";
+  font-size: 18px;
+  color: white;
+  width: 100%;
+  height: 25px;
+  background: none;
+  border: none;
+  padding: 10px 0px 10px;
+  resize: none;
+  -ms-overflow-style: none; /* Internet Explorer 10+ */
+  scrollbar-width: none; /* Firefox */
+}
+
+.dm-msg-form-input:focus {
+  border: none;
+  outline: none;
+}
+
+.dm-msg-form-input::-webkit-scrollbar {
+  display: none; /* Safari and Chrome */
+}
+
+.dm-msg-form-button {
+  color: white;
+  background: none;
+  border: none;
+  height: 41px;
+}
+
+.dm-msg-form-disabled:hover {
+  cursor: not-allowed;
+}
+
+.dm-msg-hidden {
+  visibility: hidden;
+  height: 0px;
+}
+
+.dm-character-count-warning {
+  color: white;
+}
+
+.dm-character-count-error {
+  color: #f85b60;
+}
+
+#scroller * {
+  overflow-anchor: none;
+}
+
+#anchor {
+  overflow-anchor: auto;
+  height: 1px;
+}
+
+.dm-msg-reactions {
+  /* border: 2px solid red; */
+  height: auto;
+  color: white;
+  display: flex;
+  flex-direction: row;
+}
+
+.reactions-each-container {
+  border: 2px solid green;
+  width: 50px;
 }
