--- a/react-app/src/components/MessageItem/MessageItem.css
+++ b/react-app/src/components/MessageItem/MessageItem.css
@@ -4,18 +4,21 @@
   font-weight: normal;
   font-style: normal;
 }
+
 @font-face {
   font-family: "Discord Thin";
   src: url("../../static/Uni\ Sans\ Thin.otf");
   font-weight: normal;
   font-style: normal;
 }
+
 @font-face {
   font-family: "Discord Bold";
   src: url("../../static/Uni\ Sans\ Heavy.otf");
   font-weight: normal;
   font-style: normal;
 }
+
 .message-item {
   display: flex;
   justify-content: space-between;
@@ -28,8 +31,12 @@
   display: flex;
   width: 80%;
 }
+
 .message-item:hover {
   background-color: rgb(45, 48, 53);
+  padding-bottom: 5px;
+  margin-left: 0px;
+  margin-right: 0px;
 }
 
 .message-left-side {
@@ -52,11 +59,12 @@
 
 .message-sender {
   display: flex;
-  font-family: "ByteBud";
   align-items: flex-end;
+  font-family: "ByteBud";
   font-size: 16px;
   color: white;
 }
+
 .message-username {
   margin: 0px 10px 0px 0px;
   position: relative;
@@ -64,14 +72,16 @@
   font-size: 18px;
   font-weight: bold;
 }
+
 .message-timestamp {
   margin: 0px 0px 0px 0px;
   font-size: 12px;
   color: #a9bac1;
 }
+
 .message-content p {
   font-family: "ByteBud";
-  font-size: 18px;
+  font-size: 16px;
   color: white;
   margin: 0;
 }
@@ -87,4 +97,13 @@
   display: flex;
   overflow-block: scroll;
   height: auto;
+}
+
+#channel-scroller * {
+  overflow-anchor: none;
+}
+
+#channel-anchor {
+  overflow-anchor: auto;
+  height: 1px;
 }
