work on components

--- a/react-app/src/components/NotFound/NotFoundPageLoggedIn.css
+++ b/react-app/src/components/NotFound/NotFoundPageLoggedIn.css
@@ -38,13 +38,13 @@
   cursor: pointer;
 }
 
-.pixel-pal-logo-text-black {
+.byte-bud-logo-text-black {
   font-family: "Prompt", sans-serif;
   font-size: 18px;
   margin: 0;
 }
 
-.pixel-pal-logo-black {
+.byte-bud-logo-black {
   height: 34px;
   width: 34px;
 }
