--- a/react-app/src/components/ServerMembersSidebar/ServerMemberSidebar.css
+++ b/react-app/src/components/ServerMembersSidebar/ServerMemberSidebar.css
@@ -1,41 +1,41 @@
 .sidebar {
-    position: fixed;
-    top: 51px;
-    bottom: 49px;
-    right: 0px;
-    background-color: #404249;
-    padding: 20px;
-    /* border: 1px solid #ddd; */
-    width: 400px;
+  position: fixed;
+  top: 51px;
+  bottom: 49px;
+  right: 0px;
+  background-color: #404249;
+  padding: 20px;
+  /* border: 1px solid #ddd; */
+  width: 400px;
 }
 
 .server-members-setting-btn {
-    position: fixed;
-    right: 20px;
-    top: 73px;
-    color: #60636B;
+  position: fixed;
+  right: 20px;
+  top: 73px;
+  color: #60636b;
 }
 
 .server-members-setting-btn button {
-    font-size: 20px;
-    background-color: transparent;
-    border: none;
-    color: #60636B;
+  font-size: 20px;
+  background-color: transparent;
+  border: none;
+  color: #60636b;
 }
 
 .server-members-setting-btn button i:hover {
-    color: #808490;
-    transform: scale(1.1);
-    transition: transform 0.2s ease-in-out;
-    cursor: pointer;
+  color: #808490;
+  transform: scale(1.1);
+  transition: transform 0.2s ease-in-out;
+  cursor: pointer;
 }
 
 .server-member-list-card {
-    list-style: none;
-    display: flex;
-    flex-direction: row;
+  list-style: none;
+  display: flex;
+  flex-direction: row;
 }
 
 #server-members-container {
-    overflow-y: auto;
+  overflow-y: auto;
 }
